Add dynamic query to DatabaseHelper.getActivityDataByName; Remove code on RecentWorkoutsFragment to repurpose fragment; Add both spinners to WorkoutListFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
     <string-array name="SimpleWeightedMeasurements">
         <item> Reps </item>
     </string-array>
+    <string-array name="ActivityOrder">
+        <item> Recent </item>
+        <item> Top </item>
+    </string-array>
+
 </resources>
